--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>eShop</title>
     <script src="main.js" async></script>
     <link rel="stylesheet" href="main.css" />
@@ -63,6 +64,7 @@
     </header>
     <main>
       <div class="goods-list"></div>
+      <span class="total-price"></span>
     </main>
   </body>
 </html>
