Добавила визуальное представление для элементов корзины. Запросы пока обрабатываются коряво, после удаления товара из корзины она превращается  в пустой объект и приложение крашится

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </svg>
         </button>
         <transition name="fade">
-          <cart :visible="isVisibleCart"></cart>
+          <cart :goods="cart" :visible="isVisibleCart"></cart>
         </transition>
       </header>
       <main>
